--- a/SearchReloader/View/SearchLikes.html
+++ b/SearchReloader/View/SearchLikes.html
@@ -1,10 +1,82 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <title></title>
+<head> 
+      
+     <link type="text/css" rel="stylesheet" href="../Content/bootstrap.css" />
+     <title></title>
 	<meta charset="utf-8" />
 </head>
 <body>
+    <div class="jumbotron">
+        <h1 class="h1">Search using Car,Shoes and Clothing</h1>
+    </div>
+
+<div class="row">
+ <div class="col-md-3" id="Ads">
+
+
+ </div>
+ <div class="col-md-7">
+     <div class="row">
+         <div class="form-group">
+             <label for="txtSearch">Search</label>
+             <input type="text" class="form-control" id="txtSearch" aria-describedby="searchHelp" placeholder="Enter Search" />
+             <small id="searchHelp" class="form-text text-muted">Search using the words Car, Shoes and Clothing for this demo.</small>
+         </div>
+        
+     </div>
+     <input type="button" id="btnSearch" value="Search" class="btn btn-primary" />
+
+     <div class="row" id="searchResults">
+
+
+     </div>
+
+ </div>
+        
+</div>
+
+
+
+    <script type="text/javascript" src="../Scripts/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="../Scripts/bootstrap.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+       
+
+    });
+
+    $('#btnSearch').click(function () {
+        var category = $('#txtSearch').val();
+        var searchAPI = 'http://localhost:61500/api/SearchResult/GetSearch?category=' + category;
+        var similarSearch = 'http://localhost:61500/api/SimilarSearch/GetCoupon?category=' + category;
+        var searchResults = '';
+        var ads = '';
+        $.getJSON(searchAPI)
+        .done(function (data) {
+            // on success get data
+                searchResults += '<div class=col-md-8>' + data.SearchResultContent + '</div>';
+
+           
+                $("#searchResults").append(searchResults);
+
+            // bring in the ads asynchronous without bothering the other data
+                $.getJSON(similarSearch)
+                .done(function (data) {
+                    ads += '<h3>' + data.sameSearchBody + '</h3>';
+
+                    $('#Ads').append(ads);
+                });
+
+
+
+        });
+
+    });
+
+</script>
 
 </body>
+
+
 </html>
